# package_openwrt

./: README.md
9563-9882-drivers-for-art/: Makefile
9563_9886_network/: Makefile
9563_9886_network_capwap/: Makefile
9563_softac/: Makefile
ac_platform/: .clang-format  Makefile
ac_platform/src/: CMakeLists.txt  Makefile  base64.c  base64.h  func.c  func.h  init.c  init.h  logs.c  logs.h  maclist.c  maclist.h  main.c  mcurl.c  mcurl.h  searchclient.c  self.c  self.h  tcping.c  tcping.h  utils.c  utils.h
ac_platform/src/elog/: elog.c  elog.h  elog_file_port.c  elog_time.c  elog_utils.c
alarm_services/: Makefile
alarm_services/files/: alarm.config  alarm.init  alarm.pid
alarm_services/src/: Makefile  MyQueue.c  MyQueue.h  common.h  function.c  function.h  ipcmsg.h  logger.c  logger.h  main.c  mqtt.c  mqtt.h  utils.c  utils.h
cJSON/: Makefile
capwap/cloud_wlan_kmod/: Makefile
capwap/cloud_wlan_kmod-2/: Makefile
capwap/configbin_tool/: Makefile
capwap/pspi/: Makefile
cscan/: Makefile
dmalloc/: Makefile
led/: Makefile
led_general/: Makefile
led_xinjiang/: Makefile
libserialport/: Makefile
local-base/: Makefile
local-general/: Makefile
local-luci/: Makefile
local-xinjiang/: Makefile
mesh_config/: Makefile
msgpack-c/: Makefile
mytimer/: Makefile
nanopb/: Makefile
netlink_notify/: Makefile
pbtest/: Makefile
qca-hostap-10.4-capwap/: Makefile
qca_988x_board/: Makefile
rgb_led/: Makefile
setmac/: Makefile
stm32upgrade/: Makefile
tcping/: Makefile
usbtest/: Makefile
uwbclient/: .clang-format  Makefile
(+384 files in other folders)
